# tree-sitter-grammars

./: Cargo.toml  LICENSE  README.md  flake.nix  languages.toml
grammars/tree-sitter-org/: package.json
grammars/tree-sitter-org/src/: grammar.json  parser.c
src/: lib.rs  main.rs
