[package]
name = "tree-sitter-grammars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
git2 = "0.18.1"
indicatif = "0.17.7"
openssl = { version = "0.10.62", features = ["vendored"] }
toml = "0.8.8"
